<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.configuracion.ConfiguracionFragment">

  <TextView
      android:id="@+id/tvConfigProfile"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:text="@string/settings_Profile"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />



  <TextView
      android:id="@+id/tvConfigProfile2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:text="@string/settings_GPS"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText3" />

  <TextView
      android:id="@+id/tvConfigProfile4"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:text="@string/settings_Notifications"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText3" />

  <TextView
      android:id="@+id/tvConfigProfile3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:text="@string/settings_GPS"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText3" />

  <EditText
      android:id="@+id/etIdProfile"
      android:layout_width="217dp"
      android:layout_height="33dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="10dp"
      android:background="#11000000"
      android:ems="10"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvConfigProfile" />

  <TextView
      android:id="@+id/tvIdProfile"
      android:layout_width="87dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:text="@string/Profile"

      app:layout_constraintBottom_toBottomOf="@+id/etIdProfile"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/etIdProfile" />

  <TextView
      android:id="@+id/tvEmail"
      android:layout_width="122dp"
      android:layout_height="21dp"
      android:layout_marginStart="10dp"
      android:text="@string/email"
      app:layout_constraintBottom_toBottomOf="@+id/tvConEmail"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tvConEmail" />

  <TextView
      android:id="@+id/tvPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:text="@string/password"
      app:layout_constraintBottom_toBottomOf="@+id/editText3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/editText3" />

  <EditText
      android:id="@+id/tvConEmail"
      android:layout_width="217dp"
      android:layout_height="33dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="10dp"
      android:background="#11000000"
      android:ems="10"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etIdProfile" />

  <EditText
      android:id="@+id/editText3"
      android:layout_width="217dp"
      android:layout_height="33dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="10dp"
      android:background="#11000000"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvConEmail" />


  <CheckBox
      android:id="@+id/chboxOrderFraternity"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:text="@string/fraternity_Order"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvConfigProfile2" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardViewUD"
      android:layout_width="315dp"
      android:layout_height="51dp"
      android:layout_marginTop="64dp"
      app:cardBackgroundColor="@color/colorAccent"
      app:cardCornerRadius="30dp"
      app:cardElevation=".1dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/chboxNotifications">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="51dp">

          <TextView
              android:id="@+id/tvUpdateData"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="8dp"
              android:clickable="true"
              android:text="@string/btnUpdateData"
              android:textColor="#fff"
              android:textSize="24sp" />
      </RelativeLayout>
  </androidx.cardview.widget.CardView>

  <CheckBox
      android:id="@+id/chboxNotifications"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="340dp"
      android:text="@string/notifications_Access"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvConfigProfile4" />

</androidx.constraintlayout.widget.ConstraintLayout>
